--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+/* Load LazyDog Font */
+@font-face {
+    font-family: 'LazyDog';
+    src: url('Lazydog.otf') format('opentype'),
+         url('lazy_dog.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 /* Apply Worksucks Background */
 body {
     background: url('worksucksbackground.png') repeat;
@@ -6,15 +15,7 @@ body {
     font-family: 'LazyDog', sans-serif;
     text-align: center;
     padding: 20px;
-    @font-face {
-    font-family: 'LazyDog';
-    src: url('Lazydog.otf') format('opentype'),
-         url('lazy_dog.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
 }
-}
-
 h1 {
     font-size: 2.5rem;
     text-shadow: 0 0 10px #0ff, 0 0 20px #0ff;
