--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@
 
 /* Apply Worksucks Background */
 body {
-    background: url('worksucksbackground.png') repeat;
+    background: url('https://github.com/kidgrandma/s4_134d3rb04rd/blob/main/worksucksbackground.png?raw=true') repeat;
     background-size: cover;
     color: #0ff; /* Neon cyan text */
     font-family: 'LazyDog', sans-serif;
